--- a/src/shared/i18n/de.json
+++ b/src/shared/i18n/de.json
@@ -107,5 +107,11 @@
   "home.tasks.day3.description": "Pathfinding algorithms, marks and advanced data structures.",
 
   "day.day": "Tag {{num}}",
-  "day.task": "Aufgabe {{num}}"
+  "day.task": "Aufgabe {{num}}",
+
+  "about.tooltip": "Über Amazeing",
+  "about.developedBy": "Entwickelt von",
+  "about.helpOf": "Mit Unterstützung von",
+  "about.tutors": "Aktuellen und teilweise ehemaligen Programmierung 2 Tutoren",
+  "about.sourceCode": "Quellcode"
 }
